<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/parent_constraint_layout"
    tools:context="h_mal.appttude.com.driver.ui.DriverHomeFragment">

    <TextView
        android:id="@+id/prova_title_tv"
        style="@style/headerStyle"
        android:layout_marginTop="48dp"
        android:selectAllOnFocus="true"
        android:text="@string/profile_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".60" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/subheader"
        android:layout_marginTop="12dp"
        android:text="@string/driver_profile_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prova_title_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/driver_prof"
        style="@style/TextButton.WithIcon"
        android:layout_marginBottom="12dp"
        android:text="@string/driver_profile"
        app:layout_constraintBottom_toTopOf="@id/private_hire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/private_hire"
        style="@style/TextButton.WithIcon"
        android:layout_marginBottom="12dp"
        android:text="@string/private_hire_license"
        app:layout_constraintBottom_toTopOf="@id/drivers_license"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/drivers_license"
        style="@style/TextButton.WithIcon"
        android:layout_marginBottom="64dp"
        android:text="@string/drivers_license"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>