<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="64dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/driver"
        style="@style/TextButton.WithIcon"
        android:layout_marginBottom="12dp"
        android:text="@string/driver_profile" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/car"
        style="@style/TextButton.WithIcon"
        android:text="@string/vehicle_profile" />
</LinearLayout>