...
    <string name="image_description">basic app image</string>
    <string name="private_hire_license_no">Private Hire License no.</string>
    <string name="private_hire_license_expiry">Private Hire License Expiry</string>
    <string name="upload_private_hire_vehicle_certificate">Upload Private hire vehicle certificate</string>
    <string name="private_hire_certificate_license_no">Private Hire Certificate License no.</string>
    <string name="private_hire_certificate_expiry">Private Hire Certificate Expiry</string>
    <string name="driver_profile">Driver Profile</string>
    <string name="private_hire_license">Private Hire License</string>
    <string name="drivers_license">Drivers License</string>
    <string name="v5c_number">V5C number</string>
    <string name="upload_logbook">Upload logbook</string>
    <string name="or_create_my_account">Or create my account</string>
    <string name="hello_nice_to_meet_you">Hello, nice to meet you!</string>
...
